# anafi_ws

./: .gitignore  README.md  requirements.txt
data/anafi_state_function/linear_mpc/: state_data_x.csv  state_data_y.csv  (+2 more)
data/track_parrot_drone/: drone_data.csv
src/anafi_msgs/: CMakeLists.txt  package.xml
src/anafi_msgs/msg/: BoxData.msg  CollectCurrentState.msg  ControlData.msg  CurrentState.msg  FrameYolo.msg  ImageKeyPoints.msg  KeyPoints.msg  KpYolo.msg  Matrices.msg  Output.msg  PlotData.msg  PnPDataYolo.msg  Position.msg  Speed.msg
src/anafi_test/: package.xml  setup.cfg  setup.py
src/track_parrot/: package.xml  setup.cfg  setup.py
src/track_parrot/launch/: get_keypoint_launch.py  pursuer_launch_yolo.py
src/track_parrot/process_data/: plot_tracking_data.py
src/track_parrot/track_parrot/: collect_parrot_fig.py  get_3d_bbox_yolo.py  get_3d_pos_yolo.py  get_anafi_vedio.py  get_drones_state.py  get_keypoints.py  get_vicon_data.py  plot_data_yolo.py  tracking_drone_yolo.py
src/track_parrot/train_drone_yolo_2d/: data.yaml  test.py  train.py
src/track_parrot/train_drone_yolo_2d/dataset/labels/: train.cache  val.cache
src/track_parrot/train_drone_yolo_2d/dataset/labels/train/: train_0.txt  train_1.txt  train_10.txt  train_100.txt  train_101.txt  train_102.txt  train_103.txt  train_104.txt  train_105.txt  train_106.txt  train_107.txt  train_108.txt  train_109.txt  train_11.txt  train_110.txt  train_111.txt  train_112.txt  train_113.txt  train_114.txt  train_115.txt  train_116.txt  train_117.txt  train_118.txt  train_119.txt  train_12.txt  train_120.txt  train_121.txt  train_122.txt  train_123.txt  train_124.txt  train_125.txt  train_126.txt  train_127.txt  train_128.txt  train_129.txt  train_13.txt  train_130.txt  train_131.txt  train_132.txt  train_133.txt  (+198 more)
src/track_parrot/train_drone_yolo_2d/dataset/labels/val/: val_0.txt  val_1.txt  val_10.txt  val_11.txt  val_12.txt  val_13.txt  val_14.txt  val_15.txt  val_16.txt  val_17.txt  val_18.txt  val_19.txt  val_2.txt  val_20.txt  val_21.txt  val_22.txt  val_23.txt  val_24.txt  val_25.txt  val_26.txt  val_27.txt  val_28.txt  val_29.txt  val_3.txt  val_30.txt  val_31.txt  val_32.txt  val_33.txt  val_34.txt  val_35.txt  val_36.txt  val_37.txt  val_38.txt  val_39.txt  val_4.txt  val_40.txt  val_41.txt  val_42.txt  val_43.txt  val_44.txt  (+20 more)
src/track_parrot/train_drone_yolo_2d/drone_detection/: args.yaml  events.out.tfevents.1743465127.yousa-Vector-17-HX-A13VHG.196634.0  results.csv
src/track_parrot/train_drone_yolo_3d/: convert2yolo.py  data.yaml  test.py  train.py
src/track_parrot/train_drone_yolo_3d/dataset/labels/: train.cache  val.cache
src/track_parrot/train_drone_yolo_3d/dataset/labels/train/: 0.txt  1.txt  100.txt  102.txt  103.txt  104.txt  105.txt  106.txt  108.txt  109.txt  11.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  134.txt  135.txt  138.txt  14.txt  140.txt  (+760 more)
src/track_parrot/train_drone_yolo_3d/dataset/labels/val/: 10.txt  101.txt  107.txt  110.txt  120.txt  136.txt  137.txt  139.txt  158.txt  168.txt  174.txt  184.txt  198.txt  199.txt  208.txt  209.txt  210.txt  213.txt  215.txt  218.txt  221.txt  23.txt  235.txt  237.txt  244.txt  247.txt  25.txt  254.txt  256.txt  259.txt  260.txt  261.txt  265.txt  275.txt  277.txt  280.txt  281.txt  289.txt  292.txt  294.txt  (+160 more)
src/track_parrot/train_drone_yolo_3d/drone_detection_3d/: args.yaml  events.out.tfevents.1744150271.yousa-Vector-17-HX-A13VHG.257706.0  results.csv
(+24 files in other folders)
