<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>track_parrot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zjiang11@ualberta.ca">yousa</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <!-- <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend> -->
  
  <!-- Removed redundant generic dependency on geometry_msgs -->
  <exec_depend>python3</exec_depend>
  <exec_depend>python3-pip</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
